--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Culturama</title>
     <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Work+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
-        integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="shortcut icon" href="./assets/img/Favicon2.png" type="image/x-icon">
     <link rel="stylesheet" href="./assets/style/style.css">
 </head>
@@ -45,14 +42,14 @@
         <section class="categorias">
             <h2 class="categorias__titulo">Categorias</h2>
             <ul class="categorias__lista">
-                <li class="categorias__item">Shows</li>
-                <li class="categorias__item">Teatro</li>
-                <li class="categorias__item">Festivais</li>
-                <li class="categorias__item">Cinema</li>
-                <li class="categorias__item">Arte</li>
-                <li class="categorias__item">Fotografia</li>
-                <li class="categorias__item">Tecnologia</li>
-                <li class="categorias__item">Design</li>
+                <li class="categorias__lista__item">Shows</li>
+                <li class="categorias__lista__item">Teatro</li>
+                <li class="categorias__lista__item">Festivais</li>
+                <li class="categorias__lista__item">Cinema</li>
+                <li class="categorias__lista__item">Arte</li>
+                <li class="categorias__lista__item">Fotografia</li>
+                <li class="categorias__lista__item">Tecnologia</li>
+                <li class="categorias__lista__item">Design</li>
             </ul>
             <div class="categorias__destaques">
                 <div class="destaques">
