--- a/index.html
+++ b/index.html
@@ -123,8 +123,9 @@
                     <h5>São Paulo | SP</h5>
                     <button>Ver</button>
                 </li>
-                <li class="eventos__botao"><button>Ver mais</button></li>
+                <!-- <li class="eventos__botao"><button>Ver mais</button></li> -->
             </ul>
+            <button class="eventos__btn">Ver mais</button>
         </section>
         <section class="agenda">
             <h2 class="agenda__titulo">Coloque na sua agenda!</h2>
@@ -201,8 +202,9 @@
                         <button>Avise-me</button>
                     </div>
                 </li>
-                <li class="agenda__botao"><button>Ver mais</button></li>
+                <!-- <li class="agenda__botao"><button>Ver mais</button></li> -->
             </ul>
+            <button class="agenda__botao">Ver mais</button>
         </section>
     </main>
     <footer class="rodape">
